Update plugin to expect input as parameters instead of body
